--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 black==22.10.0
 click==8.1.3
 Django==4.1.3
+django-crispy-forms==1.14.0
 flake8==5.0.4
 gunicorn==20.1.0
 mccabe==0.7.0
